tests/b_invalid/duplicate_symbols.out
tests/b_invalid/duplicate_symbols.ri:15:6: error: module `duplicate_symbols` has duplicate symbol `other`
   15 | func other(a: int32) -> { // FAIL
      |      ^
tests/b_invalid/duplicate_symbols.ri:20:8: error: module `duplicate_symbols` has duplicate symbol `Gota`
   20 | struct Gota { } // FAIL
      |        ^
tests/b_invalid/duplicate_symbols.ri:22:6: error: enum `State` has duplicate variant `Idle`
   22 | enum State {
      |      ^
rivetc: error: could not compile module `duplicate_symbols`, aborting due to 3 previous errors